# pycmcontrol-mqtt

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: api.rst  index.rst
docs/source/: api.rst  apontamento.rst  conf.py  errors.rst  index.rst  installation.rst  mqtt.rst  oauth2.rst  quickstart.rst  structure.rst  tls.rst
examples/: 00_smoke_imports.py  01_connect_only.py  02_login_oauth2.py  03_ping_state_passivo.py  04_validar_rota.py  05_apontar_serial_ok.py  06_apontar_lote_1porreq.py  07_apontar_com_evidencia_txt.py  08_teste_erros.py  09_stress_login_renovacao.py  10_apontar_vinculo_2seriais.py  11_apontar_com_evidencia_texto.py  12_apontar_com_evidencia_arquivo.py  13_apontar_com_ordem_transporte_adicionar.py  14_apontar_ordem_transporte_apontar.py  15_debug_payload_apontamento.py  _common.py  apontar_lote_1porreq.py  apontar_um_serial.py  login_e_ping_state.py
src/pycmcontrol_mqtt/: __init__.py  client.py  config.py  errors.py  models.py  utils.py
